# dbt-datadict

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  datadictionary.yml  dbt_datadictionary.py  pyproject.toml  readme.md  requirements.txt  setup.py  test.py
.github/: CODEOWNERS  issue_template.md
.github/workflows/: publish.yml
app/: __init__.py  class_datadict.py
datadict/: __init__.py  datadict_class.py  datadict_dbt.py  datadict_helpers.py  datadict_main.py  datadict_yaml.py
docs/: developer_guide.md  release.md  user_guide.md
models/: _int_facebook.yml  stg_facebook_account_history.sql  stg_facebook_ad_history.sql
test/: test.py
